[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camoufox"
version = "0.1.0"
description = "Camoufox browser engine for Lucid Empire"
authors = [ { name = "Lucid Empire" } ]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["pythonlib"]
